fix white space

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -6,7 +6,7 @@
   }
 .heroImg{
     width: 100%;
-    height: 25%;
+    display:block
   }
 .center {
         position: absolute;
